--- a/client/src/pages/ListManagement.css
+++ b/client/src/pages/ListManagement.css
@@ -51,7 +51,7 @@
     outline: none;
 }
 
-#show-hero-info, #edit-list-btn{
+#show-hero-info, #edit-list-btn, #delete-btn{
     margin-top: 1rem;
     height: 1.5rem;
     width: 15rem;
@@ -92,7 +92,7 @@
     margin-top: 0rem;
 }
 
-#create-list-btn:hover, #show-hero-info:hover, #edit-list-btn:hover{
+#delete-btn:hover, #create-list-btn:hover, #show-hero-info:hover, #edit-list-btn:hover{
     background-color: #CFD6C6;
 }
 
