--- a/client/src/pages/PublicLists.css
+++ b/client/src/pages/PublicLists.css
@@ -1,8 +1,22 @@
 #center-div{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    margin-top: 7vh;
+    justify-content: center;
+    align-items: center;
     display: flex;
     flex-direction: column;
+}
+
+#public-lists{
+    height: 30rem;
+    overflow-y: auto;
+}
+
+#public-list-item{
+    border: 1px black solid;
+    padding: 1rem;
+}
+
+#public-list-item:hover{
+    background-color: lightgrey;
+    cursor: pointer;
 }
